--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:6603/websockets_messaging
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+#properties are passed by docker-compose.yml
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:6603/websockets_messaging
+#spring.datasource.username=springuser
+#spring.datasource.password=ThePassword
