--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,21 @@
 version: '3.7'
 
-# Define services
 services:
-  # App backend service
   app-server:
-    # Configuration for building the docker image for the backend service
     build:
-      context: . # Use an image built from the specified dockerfile in the `polling-app-server` directory.
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
     restart: always
     depends_on:
-      - db # This service depends on mysql. Start that first.
-    environment: # Pass environment variables to the service
+      - db
+    environment:
       SPRING_JPA_HIBERNATE_DDL-AUTO: update
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/websockets_messaging?useSSL=false&allowPublicKeyRetrieval=true
-      SPRING_DATASOURCE_USERNAME: springuser
-      SPRING_DATASOURCE_PASSWORD: ThePassword
-    networks: # Networks to join (Services on the same network can communicate with each other using their name)
+      SPRING_DATASOURCE_URL: #jdbc:mysql://db:3306/websockets_messaging?useSSL=false&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_USERNAME: #springuser
+      SPRING_DATASOURCE_PASSWORD: #ThePassword
+    networks:
       - backend
 
   # Database Service (Mysql)
